# packster

./: Cargo.toml  LICENSE  README.md  draft.rs  pm.md  ref.md  todo.md
.github/workflows/: main.yaml  release.yaml  test.yaml
doc/: location.excalidraw  packster-manifest-example.ron  pm.md  ref.md  todo.md
packster-application/: Cargo.toml
packster-application/src/: error.rs  lib.rs  pack.rs  project_manifest.rs
packster-cli/: Cargo.toml  packster.toml
packster-cli/src/: deploy_file.rs  init_location.rs  main.rs  pack.rs  parse.rs  show_location.rs  undeploy.rs
packster-core/: Cargo.toml
packster-core/src/: application.rs  domain.rs  entity.rs  error.rs  lib.rs  operation.rs  pack.rs  packaging.rs  path.rs  port.rs
packster-core/src/application/: operation.rs  path.rs  port.rs
packster-core/src/operation/: deploy.rs  generic.rs  generic_application.rs  generic_domain.rs  init_location.rs  pack.rs  show_location.rs  undeploy.rs
packster-core/src/packaging/: application.rs  domain.rs
packster-infrastructure/: Cargo.toml
packster-infrastructure/src/: digester.rs  error.rs  in_memory_filesystem.rs  json.rs  lib.rs  sha2_digester.rs  std_filesystem.rs  tarball_archiver.rs  toml.rs  toml_parser.rs  uniqid_identifier_generator.rs
packster-test/: Cargo.toml
packster-test/src/: lib.rs  packaging.rs  stub.rs
packster-test/src/stub/my-simple-package/: a_file.txt  packster.toml
packster-test/stub/my-simple-package/a_directory/: a_another_file.txt
sample/: packster.ron
src/: application.rs  business.rs  draft.rs  error.rs  essential.rs  infrastructure.rs  main.rs  mandatory.rs  path.rs
src/application/: representation.rs
src/application/representation/: error.rs  portage_manifest.rs  project_manifest.rs
src/business/: command.rs  pack.rs  port.rs
src/business/command/: pack.rs
src/business/port/: capability.rs  dto.rs
src/essential/: pack.rs  port.rs
src/essential/port/: capability.rs  dto.rs
src/infrastructure/: compressor.rs  digester.rs  digester_mock.rs  directory_archiver.rs  directory_digester.rs  dto.rs  file_digester.rs  hash_digester.rs  in_memory_filesystem.rs  std_filesystem.rs  tarball_archiver.rs
src/infrastructure/dto/: error.rs  portage_manifest.rs
src/infrastructure/mock/: filesystem.rs
src/mandatory/: directory_archiver.rs  directory_digester.rs  directory_packager.rs  mock.rs
src/mandatory/dto/: error.rs  portage_manifest.rs
src/mandatory/mock/: filesystem.rs
(+8 files in other folders)
