[package]
name = "packster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0"
normpath = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.0"
uniqueid = "0.2.6"
sha2= "0.10.6"
# rust-lzma = "0.5.1"
#tera = "1.17.1"
#relative-path = "1.7.3"