[package]
name = "packster-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
packster-core = { path = "../packster-core" }
sha2 = "0.10.6"
tar = "0.4.38"
flate2 = "1.0.25"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.0"
serde_json = "1.0.93"
unique_id = "0.1.5"

[dev-dependencies]
hex = "0.4.3"

[features]
test = []
