[package]
name = "packster-infrastructure"
version = "0.1.1"
edition = "2021"

[dependencies]
packster-core = { path = "../packster-core" }
sha2 = "0.10.6"
tar = "0.4.38"
flate2 = "1.0.26"
walkdir = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"
serde_json = "1.0.96"
unique_id = "0.1.5"

[dev-dependencies]
hex = "0.4.3"

[features]
test = []
