[package]
name = "packster-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
packster-core = { path = "../packster-core" }
packster-infrastructure = { path = "../packster-infrastructure", features=["test"] }
indoc = "2.0.1"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"